update to use post requests update to use a model
